@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class ApplicationSession{
    + static getInstance()
    + getCurrentSession()
}

class UserSession{
}


class Vehicle {
    - brand: String
    - model: String
    - plate: int
    - type: String
    - tare: int
    - grossWeight: String
    - currenteKM: int
    - registerDate: Date
    - acquisitionDate: Date
    - frequencyCheckKm: int

    + Vehicle(brand, model, plate, type, tare, grossWeight, currenteKM, registerDate, acquisitionDate, checkupFrequency)
    + getCheckUpList()
}

class VehicleRepository {
    + getCheckUpList()
}


class Repositories {
    - Repositories()
    + getInstance()
    + getVehicleRepository

}

class CheckUpListController {
    + getCheckUpList
}

class CheckUpListUI {
}


Repositories -> "1" VehicleRepository
Repositories -> Repositories : instance

ApplicationSession -> ApplicationSession : instance
ApplicationSession --> "1" UserSession : userSession

CheckUpListUI .> CheckUpListController

CheckUpListController .> Repositories : repositories
CheckUpListController ..> ApplicationSession
CheckUpListController ..> UserSession
CheckUpListController ..> VehicleRepository : VehicleRepository
CheckUpListController ..> VehicleRepository : VehicleRepository


VehicleRepository "1" --> "*" Vehicle : vehicles

@enduml